# daily_magic_bot

./: .env.template  .gitignore  CLAUDE.md  README.md  config.py  email_sender.py  gemini_processor.py  main.py  news_fetcher.py  pyproject.toml  requirements.txt  weather_parser.py
.github/workflows/: daily_report.yml
templates/: email.css  email.html
tests/: test_config.py  test_email_sender.py  test_news_fetcher.py
