[project]
name = "daily-magic-bot"
version = "2.2.0"
description = "每日魔法报告机器人 - AI驱动的科学新闻邮件推送"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.0.0,<2.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "requests>=2.31.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "lxml>=4.9.0,<6.0.0",
    "feedparser>=6.0.0,<7.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
